--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,6 +31,7 @@ const {
         "image": "https://westfortworthhandyman.com/logo.png",
         "url": "https://westfortworthhandyman.com",
         "telephone": "+1-682-703-0033",
+        "postalCode": "76116",
         "priceRange": "$$",
         "areaServed": [
           { "@type": "City", "name": "Fort Worth" },
