--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,32 +1,24 @@
 <section class="relative pt-40 md:pt-48">
-
   <!-- Background Image -->
-<div
-  class="
-    absolute inset-0 bg-cover bg-center -z-10
-    animate-[zoom_20s_linear_infinite]
-  "
-  style="background-image: url('/hero.jpg');"
-></div><div
-  class="
-    absolute inset-0 bg-cover bg-center -z-10
-    animate-[zoom_20s_linear_infinite]
-  "
-  style="background-image: url('/hero.jpg');"
-></div>
+  <div
+    class="absolute inset-0 bg-cover bg-center -z-10
+    animate-[zoom_20s_linear_infinite]"
+    style="background-image: url('/hero.jpg');"
+  >
+  </div><div
+    class="absolute inset-0 bg-cover bg-center -z-10
+    animate-[zoom_20s_linear_infinite]"
+    style="background-image: url('/hero.jpg');"
+  >
+  </div>
 
   <!-- Dark Overlay -->
-  <div
-    class="
-      absolute inset-0
+  <div class="absolute inset-0
       bg-black/50
-      -z-10
-    "
-  ></div>
+      -z-10"></div>
 
   <!-- Content -->
   <div class="max-w-5xl mx-auto px-6 py-32 text-center text-white">
-
     <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">
       Reliable Handyman Services in West Fort Worth
     </h1>
@@ -36,38 +28,30 @@
     </p>
 
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
-
       <a
-        href="tel:8175551234"
-        class="
-          bg-brand-red
+        href="tel:6827030033"
+        class="bg-brand-red
           px-8 py-4
           rounded-lg
           text-lg
           font-semibold
-          hover:opacity-90
-        "
+          hover:opacity-90"
       >
         Call Now
       </a>
 
       <a
         href="/contact"
-        class="
-          border-2 border-white
+        class="border-2 border-white
           px-8 py-4
           rounded-lg
           text-lg
           font-semibold
           hover:bg-white hover:text-brand-navy
-          transition
-        "
+          transition"
       >
         Request Estimate
       </a>
-
     </div>
-
   </div>
-
 </section>
