--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -30,6 +30,7 @@
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
       <a
         href="tel:6827030033"
+        data-astro-reload
         class="bg-brand-red
           px-8 py-4
           rounded-lg
