--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-const phone = "6827030033";
+const phone = "+16827030033";
 ---
 
 <section class="relative pt-40 md:pt-48">
@@ -33,7 +33,8 @@ const phone = "6827030033";
 
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
       <a
-        onclick={`window.location.href='tel:${phone}'`}
+        href={`tel:${phone}`}
+        data-astro-reload
         class="bg-brand-red
           px-8 py-4
           rounded-lg
